Fix issue with executable extension warning

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -22,6 +22,7 @@ if(EMSCRIPTEN)
   target_link_options(CppInterOpTests PRIVATE
     PUBLIC "SHELL: -s LINKABLE=1 -s WASM_BIGINT"
   )
+  set_target_properties(CppInterOpTests PROPERTIES SUFFIX ".wasm")
 endif()
 
 if(NOT WIN32)
@@ -47,6 +48,7 @@ if(EMSCRIPTEN)
   target_link_options(DynamicLibraryManagerTests PRIVATE
     PUBLIC "SHELL: -s LINKABLE=1 -s WASM_BIGINT"
   )
+  set_target_properties(DynamicLibraryManagerTests PROPERTIES SUFFIX ".wasm")
 endif()
 
 set_output_directory(DynamicLibraryManagerTests BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/TestSharedLib/unittests/bin/$<CONFIG>/)
