Update CMakeLists.txt to match local build

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -20,7 +20,7 @@ target_link_libraries(CppInterOpTests
 
 if(EMSCRIPTEN)
   target_link_options(CppInterOpTests PRIVATE
-    "SHELL: -s LINKABLE=1 -s WASM_BIGINT"
+    "SHELL: -s LINKABLE=1 -s WASM_BIGINT -s MAIN_MODULE=1"
   )
 endif()
 
@@ -45,7 +45,7 @@ target_link_libraries(DynamicLibraryManagerTests
 
 if(EMSCRIPTEN)
   target_link_options(DynamicLibraryManagerTests PRIVATE
-    "SHELL: -s LINKABLE=1 -s WASM_BIGINT"
+    "SHELL: -s LINKABLE=1 -s WASM_BIGINT -s MAIN_MODULE=1"
   )
 endif()
 
