Add ASM compiler which works

--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -155,6 +155,8 @@ jobs:
                 -DLLVM_BUILD_LLVM_DYLIB_VIS=On                     `
                 -DLLVM_LINK_LLVM_DYLIB=On                          `
                 -DCLANG_LINK_CLANG_DYLIB=On                        `
+                -DCMAKE_ASM_MASM_COMPILER=llvm-ml                  `
+                -DCMAKE_ASM_MASM_FLAGS="-m64"                      `
                 ..\llvm
           cmake --build . --config Release --target clang --parallel ${{ env.ncpus }}
           cmake --build . --config Release --target cling --parallel ${{ env.ncpus }}
@@ -191,6 +193,8 @@ jobs:
                 -DLLVM_BUILD_LLVM_DYLIB_VIS=On                     `
                 -DLLVM_LINK_LLVM_DYLIB=On                          `
                 -DCLANG_LINK_CLANG_DYLIB=On                        `
+                -DCMAKE_ASM_MASM_COMPILER=llvm-ml                  `
+                -DCMAKE_ASM_MASM_FLAGS="-m64"                      `
                 ..\llvm
           cmake --build . --config Release --target clang clang-repl --parallel ${{ env.ncpus }}
         }
