--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -181,6 +181,7 @@ jobs:
           cmake -G Ninja -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects}}"                   `
                 -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}"          `
                 -DCMAKE_BUILD_TYPE=RelWithDebInfo           `
+                -DLLVM_ENABLE_ASSERTIONS=ON                        `
                 -DCMAKE_CXX_COMPILER=clang-cl               `
                 -DCMAKE_C_COMPILER=clang-cl                 `
                 -DCLANG_ENABLE_STATIC_ANALYZER=OFF                  `
