--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -191,7 +191,7 @@ jobs:
                 -DLLVM_BUILD_LLVM_DYLIB=On                         `
                 -DLLVM_LINK_LLVM_DYLIB=On                           `
                 -DCLANG_LINK_CLANG_DYLIB=On -DCMAKE_ASM_MASM_COMPILER=llvm-ml -DCMAKE_ASM_MASM_FLAGS="-m64" ..\llvm
-          cmake --build . --config RelWithDebInfo --target clang clang-repl clangInterpreter --parallel ${{ env.ncpus }}
+          cmake --build . --config RelWithDebInfo --target clang clangInterpreter --parallel ${{ env.ncpus }}
         }
         cd ..\
         rm -r -force $(find.exe . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
