--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -130,7 +130,7 @@ jobs:
         }
         else
         {
-          git clone --depth=1 -b llvm-export-api-18.0 https://github.com/fsfod/llvm-project.git
+          git clone --depth=1 -b llvm-export-api-20.0 https://github.com/fsfod/llvm-project.git
         }
 
         cd llvm-project
@@ -180,7 +180,7 @@ jobs:
           echo "Apply clang${{ matrix.clang-runtime }}-*.patch patches:"
           cmake -G Ninja -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects}}"                   `
                 -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}"          `
-                -DCMAKE_BUILD_TYPE=RelWithDebInfo           `
+                -DCMAKE_BUILD_TYPE=Release           `
                 -DLLVM_ENABLE_ASSERTIONS=ON                        `
                 -DCMAKE_CXX_COMPILER=clang-cl               `
                 -DCMAKE_C_COMPILER=clang-cl                 `
@@ -191,7 +191,7 @@ jobs:
                 -DLLVM_BUILD_LLVM_DYLIB=On                         `
                 -DLLVM_LINK_LLVM_DYLIB=On                           `
                 -DCLANG_LINK_CLANG_DYLIB=On -DCMAKE_ASM_MASM_COMPILER=llvm-ml -DCMAKE_ASM_MASM_FLAGS="-m64" ..\llvm
-          cmake --build . --config RelWithDebInfo --target clang clangInterpreter --parallel ${{ env.ncpus }}
+          cmake --build . --config Release --target clang clangInterpreter --parallel ${{ env.ncpus }}
         }
         cd ..\
         rm -r -force $(find.exe . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
