--- a/.github/workflows/Ubuntu.yml
+++ b/.github/workflows/Ubuntu.yml
@@ -58,6 +58,42 @@ jobs:
             cling-version: '1.0'
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+          - name: ubu22-arm-gcc12-clang-repl-19
+            os: ubuntu-22.04-arm
+            compiler: gcc-12
+            clang-runtime: '19'
+            cling: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
+          - name: ubu22-arm-gcc12-clang-repl-18
+            os: ubuntu-22.04-arm
+            compiler: gcc-12
+            clang-runtime: '18'
+            cling: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
+          - name: ubu22-arm-gcc12-clang-repl-17
+            os: ubuntu-22.04-arm
+            compiler: gcc-12
+            clang-runtime: '17'
+            cling: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
+          - name: ubu22-arm-gcc12-clang-repl-16
+            os: ubuntu-22.04-arm
+            compiler: gcc-12
+            clang-runtime: '16'
+            cling: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
+          - name: ubu22-arm-gcc9-clang13-cling
+            os: ubuntu-22.04-arm
+            compiler: gcc-9
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
             
     steps:
     - uses: actions/checkout@v4
@@ -266,6 +302,38 @@ jobs:
             cppyy: Off
           - name: ubu22-x86-gcc9-clang13-cling-cppyy
             os: ubuntu-22.04
+            compiler: gcc-9
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: On
+          - name: ubu22-arm-gcc12-clang-repl-19-cppyy
+            os: ubuntu-22.04-arm
+            compiler: gcc-12
+            clang-runtime: '19'
+            cling: Off
+            cppyy: On
+            coverage: true
+          - name: ubu22-arm-gcc12-clang-repl-18-cppyy
+            os: ubuntu-22.04-arm
+            compiler: gcc-12
+            clang-runtime: '18'
+            cling: Off
+            cppyy: On
+          - name: ubu22-arm-gcc12-clang-repl-17-cppyy
+            os: ubuntu-22.04-arm
+            compiler: gcc-12
+            clang-runtime: '17'
+            cling: Off
+            cppyy: On
+          - name: ubu22-arm-gcc12-clang-repl-16
+            os: ubuntu-22.04-arm
+            compiler: gcc-12
+            clang-runtime: '16'
+            cling: Off
+            cppyy: Off
+          - name: ubu22-arm-gcc9-clang13-cling-cppyy
+            os: ubuntu-22.04-arm
             compiler: gcc-9
             clang-runtime: '13'
             cling: On
