--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -29,6 +29,14 @@ jobs:
             llvm_enable_projects: "clang;lld"
             llvm_targets_to_build: "WebAssembly"
             emsdk_ver: "3.1.45"
+          - name: ubu22-arm-gcc12-clang-repl-19-emscripten
+            os: ubuntu-22.04-arm
+            compiler: gcc-12
+            clang-runtime: '19'
+            cling: Off
+            llvm_enable_projects: "clang;lld"
+            llvm_targets_to_build: "WebAssembly"
+            emsdk_ver: "3.1.45"
           - name: osx15-arm-clang-clang-repl-19-emscripten
             os: macos-15
             compiler: clang
@@ -446,6 +454,13 @@ jobs:
         include:
           - name: ubu22-x86-gcc12-clang-repl-19-emscripten_wasm
             os: ubuntu-22.04
+            compiler: gcc-12
+            clang-runtime: '19'
+            cling: Off
+            micromamba_shell_init: bash
+            emsdk_ver: "3.1.45"
+          - name: ubu22-arm-gcc12-clang-repl-19-emscripten_wasm
+            os: ubuntu-22.04-arm
             compiler: gcc-12
             clang-runtime: '19'
             cling: Off
