--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -339,7 +339,9 @@ jobs:
                         ../llvm
           emmake ninja clang clang-repl lld -j ${{ env.ncpus }}
         fi
-        cd ../..
+        cd ../
+        rm -rf $(find . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
+        cd ../
 
     - name: Build LLVM/Cling on Windows systems if the cache is invalid
       if: ${{ runner.os == 'windows' && steps.cache.outputs.cache-hit != 'true' }}
