--- a/cmake/CppInterOp/CppInterOpConfig.cmake.in
+++ b/cmake/CppInterOp/CppInterOpConfig.cmake.in
@@ -1,5 +1,11 @@
 # This file allows users to call find_package(CppInterOp) and pick up our targets.
 
+# If you call this file while doing an emscripten build you will get a warning that 
+# emscripten does not support shared library builds
+if(EMSCRIPTEN)
+  set_property(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)
+endif()
+
 # Compute the installation prefix from this CppInterOpConfig.cmake file location.
 get_filename_component(CPPINTEROP_INSTALL_PREFIX "${CMAKE_CURRENT_LIST_FILE}" PATH)
 get_filename_component(CPPINTEROP_INSTALL_PREFIX "${CPPINTEROP_INSTALL_PREFIX}" PATH)
