--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -116,8 +116,8 @@ else()
       )
   endif(LLVM_LINK_LLVM_DYLIB)
   endif()
-  string(REPLACE "LLVM" "" link_libs "${link_libs}")
-  message(STATUS "link_libs: LLVM ${link_libs}")
+  message(STATUS "link_libs: ${link_libs}")
+  message(STATUS "DLM ${DLM}")
   message(STATUS "llvm_targets_to_build: LLVM ${LLVM_TARGETS_TO_BUILD}")
   add_llvm_library(clangCppInterOp
     DISABLE_LLVM_LINK_LLVM_DYLIB
