--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -82,6 +82,7 @@ else()
             continue()
           endif()
           string(REPLACE "clangEdit;" "" transitive_libs "${transitive_libs}")
+          string(REPLACE "LLVM;" "" transitive_libs "${transitive_libs}")
           foreach(transitive_lib ${transitive_libs})
             message(STATUS "transitive libs ${transitive_libs}")
             message(STATUS "transitive lib ${transitive_lib}")
