--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -81,9 +81,7 @@ else()
           if (NOT transitive_libs)
             continue()
           endif()
-          string(REPLACE "clangEdit;" "" transitive_libs "${transitive_libs}")
-          string(REPLACE "LLVM" "" transitive_libs "${transitive_libs}")
-          string(REPLACE "clangAST;" "" transitive_libs "${transitive_libs}")
+          string(REPLACE "version;" "" transitive_libs "${transitive_libs}")
           foreach(transitive_lib ${transitive_libs})
             message(STATUS "transitive libs ${transitive_libs}")
             message(STATUS "transitive lib ${transitive_lib}")
