Add a workaround for triggering the use of `CINDEX_LINKAGE`

--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -133,6 +133,8 @@ else()
     LINK_LIBS
     ${link_libs}
   )
+
+  target_compile_definitions(clangCppInterOp PUBLIC "_CINDEX_LIB_") # workaround for the use of `CINDEX_LINKAGE`
 endif()
 
 string(REPLACE ";" "\;" _VER CPPINTEROP_VERSION)
