--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -56,7 +56,7 @@ jobs:
             clang-runtime: '13'
             cling: On
             cling-version: '1.0'
-            llvm_enable_projects: "clang"
+            llvm_enable_projects: "clang;NVPTX"
             llvm_targets_to_build: "host"
           - name: osx13-x86-clang-clang-repl-19
             os: macos-13
@@ -92,7 +92,7 @@ jobs:
             clang-runtime: '13'
             cling: On
             cling-version: '1.0'
-            llvm_enable_projects: "clang"
+            llvm_enable_projects: "clang;NVPTX"
             llvm_targets_to_build: "host"
             
     steps:
