Start adding libs back in

--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -133,6 +133,9 @@ else()
     CppInterOp.cpp
     CXCppInterOp.cpp
     ${DLM}
+    LINK_LIBS
+    clangCodeGen
+    clangStaticAnalyzerCore
   )  
   endif()
 endif()
