--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -377,7 +377,7 @@ jobs:
                 -DLLVM_DIR="$env:LLVM_BUILD_DIR\lib\cmake\llvm"  `
                 -DLLVM_ENABLE_WERROR=On                          `
                 -DBUILD_SHARED_LIBS=ON                          `
-                -DLLVM_BUILD_LLVM_DYLIB_VIS=On -DCLANG_LINK_CLANG_DYLIB=On                          `
+                -DCLANG_LINK_CLANG_DYLIB=On                          `
                 -DClang_DIR="$env:LLVM_BUILD_DIR\lib\cmake\clang"  -DCODE_COVERAGE=${{ env.CODE_COVERAGE }}  -DCMAKE_INSTALL_PREFIX="$env:CPPINTEROP_DIR"  ..\
                 cmake --build . --config ${{ env.BUILD_TYPE }} --target googletest --parallel ${{ env.ncpus }}
         }
