Use clangInterpreter clangStaticAnalyzerCore instead of clang-repl target to reduce emscripten llvm cache size

--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -337,7 +337,7 @@ jobs:
                         -DLLVM_ENABLE_THREADS=OFF                       \
                         -G Ninja                                         \
                         ../llvm
-          emmake ninja clang clang-repl lld -j ${{ env.ncpus }}
+          emmake ninja clang clangInterpreter clangStaticAnalyzerCore lld -j ${{ env.ncpus }}
         fi
         cd ../
         rm -rf $(find . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
